tests/neg-custom-args/captures/leak-i21347.check
-- Error: tests/neg-custom-args/captures/leak-i21347.scala:4:15 --------------------------------------------------------
4 |  ops.foreach: op => // error
  |               ^
  |               Local any in the type of parameter ops leaks into capture scope of method runOpsAlt.
  |               You could try to abstract the capability in a capset variable.
  |
5 |    op()
