tests/neg-custom-args/captures/leak-i21347.scala
import language.experimental.captureChecking

def runOpsAlt(ops: List[() => Unit]): Unit =
  ops.foreach: op => // error
    op()